# deepseek-cursor-proxy-tray

./: .gitignore  LICENSE  README.md  pyproject.toml
installer/: build-installer.ps1  dscp-tray.iss
scripts/: install-autostart.ps1  start-tray.ps1  uninstall-autostart.ps1
src/dscp_tray/: __init__.py  __main__.py  tray.py
